--- a/SmartCityIQ/index.html
+++ b/SmartCityIQ/index.html
@@ -1,32 +1,11 @@
 <!DOCTYPE html>
-<html lang="ar" dir="rtl">
-
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SmartCityIQ - المدينة الذكية</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>SmartCityIQ</title>
+    <meta http-equiv="refresh" content="0; URL='login.html'" />
 </head>
-
 <body>
-
-<div class="login-container">
-
-    <img src="assets/logo.png" class="logo">
-
-    <h2 class="title">منصة SmartCityIQ</h2>
-
-    <p class="description">
-        أهلاً بك في منصة المدينة الذكية.  
-        منصة تجمع خدمات الماء، الكهرباء، البلدية، والبيئة  
-        بنظام موحد سهل وسريع.
-    </p>
-
-    <a href="login.html">
-        <button class="btn" style="width:100%;">دخول إلى المنصة</button>
-    </a>
-
-</div>
-
 </body>
 </html>
